--- a/src/pages/author.yaml
+++ b/src/pages/author.yaml
@@ -1,3 +1,3 @@
 - id: Sean McLane
   avatar: avatars/sean.jpg
-  bio: is on a journey to being a well-rounded alpinist.
+  bio: is an amateur climber and coder based in Salt Lake City.
