--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,6 +3,11 @@ version: 0.1
 phases:
   install:
     commands:
+      - echo Installing yarn
+      - curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
+      - echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+      - apt-get update
+      - apt-get install yarn
       - echo Installing gatsby
       - yarn global add gatsby
   pre_build:
