--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lodash": "^4.17.4",
     "lodash-id": "^0.14.0",
     "lodash-webpack-plugin": "^0.11.2",
+    "react-helmet": "^5.1.3",
     "slash": "^1.0.0",
     "typeface-space-mono": "^0.0.22",
     "typeface-spectral": "^0.0.29",
