need to install yarn

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,6 +4,9 @@ phases:
   pre_build:
     commands:
       - echo Installing yarn
+      - curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
+      - echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
+      - apt-get update
       - apt-get install yarn
       - echo Installing node_modules
       - yarn install
