--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,10 +4,11 @@ phases:
   pre_build:
     commands:
       - echo Installing yarn
+      - apt-get install apt-transport-https
       - curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
       - echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
       - apt-get update
-      - apt-get install yarn
+      - apt-get install -y yarn
       - echo Installing node_modules
       - yarn install
   build:
