--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,9 +4,8 @@ phases:
   pre_build:
     commands:
       - echo Installing yarn
-      - apt-get install apt-transport-https
-      - curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
-      - echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
+      - curl -sS http://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
+      - echo "deb http://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
       - apt-get update
       - apt-get install -y yarn
       - echo Installing node_modules
