--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,4 +19,4 @@ phases:
   post_build:
     commands:
       - echo "******** Uploading to S3 ********"
-      - aws s3 sync --delete public/ s3://dev.seanmclane.com
+      - aws s3 sync --delete public/ s3://{BUCKET_NAME}
