--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-example-using-remark",
+  "name": "seanmclane-com",
   "private": true,
-  "description": "Gatsby example site that demonstrates gatsby-transformer-remark and its plugins.",
-  "version": "1.0.0",
-  "author": "Florian Kissling <sechskilo@gmail.com>",
+  "description": "My personal static website",
+  "version": "0.1.0",
+  "author": "Sean McLane",
   "dependencies": {
     "babel-plugin-lodash": "^3.2.11",
     "bluebird": "^3.4.7",
@@ -12,6 +12,7 @@
     "gatsby-link": "latest",
     "gatsby-plugin-catch-links": "latest",
     "gatsby-plugin-glamor": "latest",
+    "gatsby-plugin-google-analytics": "latest",
     "gatsby-plugin-sharp": "latest",
     "gatsby-plugin-typography": "latest",
     "gatsby-remark-autolink-headers": "latest",
