--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "seanmclane-com",
   "private": true,
   "description": "My personal static website",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "author": "Sean McLane",
   "dependencies": {
     "babel-plugin-lodash": "^3.2.11",
@@ -23,6 +23,7 @@
     "gatsby-remark-images": "latest",
     "gatsby-remark-smartypants": "latest",
     "gatsby-source-filesystem": "latest",
+    "gatsby-transformer-json": "latest",
     "gatsby-transformer-remark": "latest",
     "gatsby-transformer-sharp": "latest",
     "gatsby-transformer-yaml": "latest",
