--- a/buildspec.yml
+++ b/buildspec.yml
@@ -23,5 +23,5 @@ phases:
     commands:
       - echo "******** Uploading to S3 ********"
       - aws s3 sync --delete public/ s3://${BUCKET_NAME} --content-encoding 'gzip' --cache-control "public,max-age=0,must-revalidate"
-      - aws s3 sync --delete public/ s3://${BUCKET_NAME} --recursive --exclude "*" --include "*.html" --content-encoding 'gzip' --cache-control "public,max-age=0"
+      - aws s3 sync --delete public/ s3://${BUCKET_NAME} --exclude "*" --include "*.html" --content-encoding 'gzip' --cache-control "public,max-age=0"
       - aws s3 sync --delete public/static s3://${BUCKET_NAME}/static --content-encoding 'gzip' --cache-control "public,max-age=31536000,immutable"
