drafts of two posts plus refactor for gatsby 2

--- a/package.json
+++ b/package.json
@@ -28,14 +28,19 @@
     "gatsby-transformer-remark": "latest",
     "gatsby-transformer-sharp": "latest",
     "gatsby-transformer-yaml": "latest",
+    "glamor": "^2.20.40",
     "lodash": "^4.17.4",
     "lodash-id": "^0.14.0",
     "lodash-webpack-plugin": "^0.11.2",
+    "prismjs": "^1.15.0",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
     "react-helmet": "^5.1.3",
+    "react-typography": "^0.16.19",
     "slash": "^1.0.0",
     "typeface-space-mono": "^0.0.22",
     "typeface-spectral": "^0.0.29",
-    "typography": "^0.15.10",
+    "typography": "latest",
     "victory": "^0.21.3"
   },
   "license": "MIT",
