--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "babel-plugin-lodash": "^3.2.11",
     "bluebird": "^3.4.7",
     "es6-object-assign": "^1.1.0",
-    "gatsby": "latest",
+    "gatsby": "^2.15.0",
     "gatsby-link": "latest",
     "gatsby-plugin-catch-links": "latest",
     "gatsby-plugin-glamor": "latest",
