visual fixes and blog post complete

--- a/package.json
+++ b/package.json
@@ -8,26 +8,26 @@
     "babel-plugin-lodash": "^3.2.11",
     "bluebird": "^3.4.7",
     "es6-object-assign": "^1.1.0",
-    "gatsby": "^2.15.28",
-    "gatsby-link": "^2.2.17",
-    "gatsby-plugin-catch-links": "latest",
-    "gatsby-plugin-glamor": "latest",
-    "gatsby-plugin-google-analytics": "latest",
-    "gatsby-plugin-react-helmet": "latest",
-    "gatsby-plugin-sharp": "latest",
-    "gatsby-plugin-sitemap": "latest",
-    "gatsby-plugin-typography": "latest",
-    "gatsby-remark-autolink-headers": "latest",
-    "gatsby-remark-copy-linked-files": "latest",
-    "gatsby-remark-images": "latest",
-    "gatsby-remark-prismjs": "latest",
-    "gatsby-remark-responsive-iframe": "latest",
-    "gatsby-remark-smartypants": "latest",
-    "gatsby-source-filesystem": "latest",
-    "gatsby-transformer-json": "latest",
-    "gatsby-transformer-remark": "latest",
-    "gatsby-transformer-sharp": "latest",
-    "gatsby-transformer-yaml": "latest",
+    "gatsby": "^2.15.35",
+    "gatsby-link": "^2.2.20",
+    "gatsby-plugin-catch-links": "^2.1.13",
+    "gatsby-plugin-glamor": "^2.1.11",
+    "gatsby-plugin-google-analytics": "^2.1.21",
+    "gatsby-plugin-react-helmet": "^3.1.11",
+    "gatsby-plugin-sharp": "^2.2.29",
+    "gatsby-plugin-sitemap": "^2.2.17",
+    "gatsby-plugin-typography": "^2.3.12",
+    "gatsby-remark-autolink-headers": "^2.1.14",
+    "gatsby-remark-copy-linked-files": "^2.1.26",
+    "gatsby-remark-images": "^3.1.26",
+    "gatsby-remark-prismjs": "^3.3.18",
+    "gatsby-remark-responsive-iframe": "^2.2.23",
+    "gatsby-remark-smartypants": "^2.1.12",
+    "gatsby-source-filesystem": "^2.1.31",
+    "gatsby-transformer-json": "^2.2.13",
+    "gatsby-transformer-remark": "^2.6.28",
+    "gatsby-transformer-sharp": "^2.2.21",
+    "gatsby-transformer-yaml": "^2.2.13",
     "glamor": "^2.20.40",
     "lodash": "^4.17.13",
     "lodash-id": "^0.14.0",
