why won't you run

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ phases:
       nodejs: 12
     commands:
       - echo Installing yarn
-      - curl -sS http://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
+      - curl -sS http://dl.yarnpkg.com/debian/pubkey.gpg | tac | apt-key add -
       - echo "deb http://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
       - apt-get update
       - apt-get install -y yarn
